welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ')' expected but double literal found.
	if ((day==1..5)&& vacation==false) {
                    ^alarmClock:6: error: ';' expected but ')' found.
	          ((day==0 || day==6)&&vacation==false)){
                                                       ^