welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
	if ((day==1..5)&& vacation==false) {
		return 7:00
	} 
	else if (((day==1..5)&& vacation) ||
	          ((day==0 || day==6)&&vacation==false)){
		return 10:00
	} else { 
		return off 
	}
}
